--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
