--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
@@ -36,6 +37,7 @@
     "husky": "^8.0.3",
     "postcss": "^8",
     "prettier": "^3.2.4",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.3.3"
   }
