--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
