--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
