--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
-    "clsx": "^2.1.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.2.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
