--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
