--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@types/react-scroll": "^1.8.10",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-scroll": "^1.9.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
