--- a/package.json
+++ b/package.json
@@ -17,10 +17,25 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "class-variance-authority": "^0.7.0",
+    "date-fns": "^3.3.1",
+    "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
-    "swiper": "^11.0.5"
+    "react-hook-form": "^7.50.1",
+    "react-hook-form-persist": "^3.0.0",
+    "swiper": "^11.0.5",
+    "tailwindcss-animate": "^1.0.7",
+    "use-mask-input": "^3.3.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
