--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
@@ -25,9 +26,9 @@
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^3.3.1",
-    "lucide-react": "^0.323.0",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
+    "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "react": "^18",
     "react-day-picker": "^8.10.0",
