--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-hook-form-persist": "^3.0.0",
+    "react-number-format": "^5.3.1",
     "react-scroll": "^1.9.0",
     "swiper": "^11.0.5",
     "zod": "^3.22.4"
