--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "husky": "^8.0.3",
     "postcss": "^8",
     "prettier": "^3.2.4",
+    "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.3.3"
