--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
@@ -54,9 +55,9 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "markdown-to-jsx": "^7.4.1",
     "postcss": "^8",
     "prettier": "^3.2.4",
-    "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.3.3"
